# digitalTwinFramework

./: Digital-Twin.ipynb  Dockerfile  INSTALL-WUR.md  INSTALL.md  README.md  demo.sh  pyproject.toml  start-container-wur.yaml  start-container.yaml
.github/workflows/: release.yml
assets/: DigitalTwinClassDiagram.puml  DigitalTwinSequence.puml  DigitalTwinUseCase.puml
data/pilots/: README.md
data/sample/: README.md  assimilate.csv  calibrated.csv  uncalibrated.csv
digitaltwin/: cropgym_to_sdm.py  demo-ascab-riskmaps-lithuania.py  demo-ascab-riskmaps.py  demo-ascab.py  demo-receive-notification.py  demo-upload-management.py  demo-upload-measurement.py  demo.py  fill_database.py  lithuania-2024-2025.py  run-demo.py  vision.py
digitaltwin/ascabmodel/: ascab_model.py  recommendation.py
digitaltwin/ascabmodel/AI_pesticide_agent/: ascab_agent.onnx
digitaltwin/cropmodel/: crop_model.py  recommendation.py
digitaltwin/cropmodel/configs/: Wofost81_NWLP_MLWB_SNOMIN.conf
digitaltwin/cropmodel/configs/AI_fertilizer_agent/: model.onnx
digitaltwin/cropmodel/configs/crop/: YAMLCropDataProvider.pkl  crops.yaml  winterwheat.yaml
digitaltwin/cropmodel/configs/site/: Lithuania.yaml
digitaltwin/cropmodel/configs/soil/: lt_soil.yaml
digitaltwin/services/: data_adapter.py  database.py
digitaltwin/utils/: agromanagement_util.py  cropgym_helpers.py  data_adapter.py  database.py  helpers.py  openmeteo.py  plotter.py  riskmap_helpers.py  simulator.py  soilgrids_to_wofost.py
orion/: deploy-mongo.yaml  deployments.yaml  service-mongo.yaml  service.yaml  values-orion.yaml
src/: cropgym_to_sdm.py
