[tool.poetry]
name = "digitaltwin"
version = "0.1.0"
description = "digitaltwin"
authors = ["Wageningen University and Research"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
onnx = "^1.16.1"
onnxruntime = "^1.18.0"
pcse = "^6.0.6"
numpy = "^1.26.4"
ngsildclient = "^0.5.2"
geojson= "^2.5.0"
gymnasium = "^0.29.1"
jupyter = "^1.1.1"
pandas = "^2.2.3"
sd-data-adapter = {git = "https://github.com/Smart-Droplets-Project/smartDropletsDataAdapters.git"}
ascab = {git = "https://github.com/BigDataWUR/A-scab.git"}
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
matplotlib = "^3.9.2"
datetime = "^5.5"
nlopt = "2.7.1"
shapely = "2.0.7"
openmeteo_requests = "1.3.0"
requests_cache = "1.2.1"
retry_requests = '2.0.0'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
